--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@playwright/test": "^1.54.2",
     "dotenv": "^17.2.1",
     "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-playwright": "^2.2.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
-    "husky": "^9.1.7"
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2"
   },
   "engines": {
     "node": ">=20.0.0"
